--- a/ihome/html/profile.html
+++ b/ihome/html/profile.html
@@ -50,11 +50,17 @@
                 </li>
             </ul>
         </div>
-        <div class="popup_con">
+        <div class="popup_con save_success">
             <div class="popup">
                 <p>保存成功！</p>
             </div>
             
+            <div class="mask"></div>
+        </div>
+        <div class="popup_con image_uploading">
+            <div class="popup">
+                <p><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i></p>
+            </div>
             <div class="mask"></div>
         </div>
         <div class="footer">
